# tclembedding

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  Makefile.dev  Makefile.in  README.md  TODO.md  autogen.sh  configure.ac  pkgIndex.tcl.in
docs/: GETTING_STARTED.md  MYSQL_INTEGRATION.md  MYSQL_QUICKSTART.md  MYSQL_UDF.md  RAG_EXAMPLE.md  SECURITY.md  SECURITY_REVIEW.md  STRUCTURE.md  TEA_SETUP.md  examples.tcl
generic/: tclembedding.c
lib/: tokenizer.tcl
models/: downloads.txt
src/: rag_optimizations.c
tests/: quick_test.tcl
tools/: README.md  ingest.tcl  schema.sql  search.tcl
unix/: Makefile.in
